// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductList/> should be list product should have the same ui structure with five product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="1"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage"
      />
      <h6>
        coca cola
      </h6>
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="2"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage1"
      />
      <h6>
        pepsi
      </h6>
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="3"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage2"
      />
      <h6>
        fanta
      </h6>
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="4"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage3"
      />
      <h6>
        sprite
      </h6>
    </div>
  </div>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="5"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage4"
      />
      <h6>
        bilz
      </h6>
    </div>
  </div>
</div>
`;

exports[`<ProductList/> should be list product should have the same ui structure with one product 1`] = `
<div
  className="card-deck mb-3 text-center"
>
  <div
    className="ard mb-4 shadow-sm walmark-card"
    key="1"
  >
    <div
      className="card-header"
    >
      <h4
        className="my-0 font-weight-normal"
      >
        bebida
      </h4>
    </div>
    <div
      className="card-body"
    >
      <h3
        className="card-title pricing-card-title"
      >
        $
        $10
      </h3>
      <img
        alt="imagen del producto bebida"
        src="http://uriimage"
      />
      <h6>
        coca cola
      </h6>
    </div>
  </div>
</div>
`;
